recent_topics: Stop last_msg_time_header::after from overflowing.

--- a/static/styles/recent_topics.css
+++ b/static/styles/recent_topics.css
@@ -252,6 +252,14 @@
             white-space: nowrap;
         }
 
+        thead .last_msg_time_header {
+            /* The responsive table of bootstrap
+               somehow ignores the width of ::after
+               element. This ensures it is always visible.
+            */
+            min-width: 93px;
+        }
+
         @media (width < $md_min) {
             /* Hide participants and last message time
                on smaller screens. This ensures user always
